--- a/style.css
+++ b/style.css
@@ -109,3 +109,7 @@ footer {
     cursor: pointer;
     margin: 0 10px; /* Spacing between buttons */
 } 
+.fab { 
+    color: #C13584; /* Example Instagram brand color */
+    margin-right: 10px; 
+ }
